commit start of chrismas tree

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
+	<head>
+		<link rel="stylesheet" href="static/styles.css">
+	</head>
 	<body>
-		<h1>Welcome to Chrismas HTTP Codes Calendar</h1>
+		<h1 class="page-title">Welcome to Chrismas HTTP Codes Calendar</h1>
+		<div class="year-container">
+			<a href="2024">
+				<div class="year-box">
+					<h1 class="year-title">2024</h1>
+				</div>
+			</a>
+		</div>
 	</body>
 </html>
